[fix] fixed screen overflow when capturing

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,7 @@
 .App {
   text-align: center;
 }
+
+body {
+  overflow: hidden;
+}
