--- a/src/components/CameraScreen/camera-screen.css
+++ b/src/components/CameraScreen/camera-screen.css
@@ -2,3 +2,9 @@
 .react-html5-camera-photo > video {
   display: block !important;
 }
+
+.camera-screen > div > #container-circles {
+  position: fixed;
+  bottom: 90px;
+  z-index: 500;
+}
